# gold-trader

./: .gitignore  PROJECT_MEMORY.md  PROJECT_MEMORY_SHORT.md  README.md  latest_paper_trade.json  pyproject.toml
src/gold_trading_one_trade_per_day/: __init__.py  analysis_cache.py  backtester.py  benchmark_models.py  calendar_service.py  crew.py  event_calendar.py  event_trigger.py  execution_service.py  gold_strategy.py  historian.py  indicators.py  latency_policy.py  llm_factory.py  main.py  market_stream.py  paper_trader.py  quota_guard.py  recovery.py  risk_engine.py  scheduler.py  schemas.py  state_store.py  synthetic_data.py  warmup.py  watchdog.py
src/gold_trading_one_trade_per_day/config/: agents.yaml  event_windows.yaml  risk_profile.yaml  tasks.yaml
src/gold_trading_one_trade_per_day/tools/: alpaca_tools.py  oanda_tools.py
tests/: test_alpaca_tools.py  test_calendar_service.py  test_crew_runtime.py  test_event_calendar.py  test_event_trigger.py  test_force_trigger_smoke.py  test_gold_strategy.py  test_indicators.py  test_latency_watchdog_warmup_benchmark.py  test_llm_factory.py  test_market_stream.py  test_quota_and_cache.py  test_recovery.py  test_schemas_and_risk.py  test_state_store_and_execution.py  test_synthetic_data.py  test_trading_modes.py
