[project]
name = "gold_trading_one_trade_per_day"
version = "0.1.0"
description = "gold_trading_one_trade_per_day using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
    "pandas",
    "alpaca-py",
]

[project.scripts]
gold_trading_one_trade_per_day = "gold_trading_one_trade_per_day.main:run"
run_crew = "gold_trading_one_trade_per_day.main:run"
train = "gold_trading_one_trade_per_day.main:train"
replay = "gold_trading_one_trade_per_day.main:replay"
test = "gold_trading_one_trade_per_day.main:test"
run_with_trigger = "gold_trading_one_trade_per_day.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
